objects/Case.object
<CustomObject>
    <fields>
        <fullName>ComplainCarBrand__c</fullName>
        <label>ComplainCarBrand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComplainCarModel__c</fullName>
        <label>ComplainCarModel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>